--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -4,19 +4,47 @@ on:
   push
 
 jobs:
-    ascii_job:
+    build_job_1:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout Reo
-              uses: actions/checkout@v4
+            - name: install cowsay program
+              run: sudo apt-get install cowsay -y
 
-            - name: List Repo Files
-              run: ls -ltra
-              
-            - name: Executing Shell Script
-              run: |
-                chmod +x ascii-script.sh
-                ./ascii-script.sh
+            - name: execute cowsay cmd
+              run: cowsay -f dragon "Run for cover, i am a dragon ....Rawr" >> dragon.txt
+
+            - name: upload dragon text file
+              uses: actions/uload-artifict@v3
+              with:
+                name: dragon-text-file
+                path: dragon.txt
+
+    test_job_2:
+        needs: build_job_1
+        runs-on: ubuntu-latest
+        steps:
+            - name: download dragon text file
+              uses: actions/download-artifict@v3
+              with:
+                name: dragon-text-file
+
+            - name: test file exists
+              run: gre -i "dragon" dragon.txt
+    deploy_job_3:
+        needs: test_job_2
+        runs-on: ubuntu-latest
+        steps:
+            - name: download dragon text file
+              uses: actions/download-artifict@v3
+              with:
+                name: dragon-text-file
+            
+            - name: read file
+              run: cat dragon.txt
+
+            - name: deploy
+              run: echo deploying .....
+
             
 
 
