--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,7 +14,7 @@ jobs:
               run: cowsay -f dragon "Run for cover, i am a dragon ....Rawr" >> dragon.txt
 
             - name: upload dragon text file
-              uses: actions/uload-artifict@v3
+              uses: actions/upload-artifict@v3
               with:
                 name: dragon-text-file
                 path: dragon.txt
