--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -14,7 +14,7 @@ jobs:
               run: cowsay -f dragon "Run for cover, i am a dragon ....Rawr" >> dragon.txt
 
             - name: upload dragon text file
-              uses: actions/upload-artifict@v3
+              uses: actions/upload-artifact@v4
               with:
                 name: dragon-text-file
                 path: dragon.txt
@@ -24,7 +24,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: download dragon text file
-              uses: actions/download-artifict@v3
+              uses: actions/download-artifact@v4
               with:
                 name: dragon-text-file
 
