--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -29,13 +29,13 @@ jobs:
                 name: dragon-text-file
 
             - name: test file exists
-              run: gre -i "dragon" dragon.txt
+              run: grep -i "dragon" dragon.txt
     deploy_job_3:
         needs: test_job_2
         runs-on: ubuntu-latest
         steps:
             - name: download dragon text file
-              uses: actions/download-artifict@v3
+              uses: actions/download-artifact@v4
               with:
                 name: dragon-text-file
             
